--- a/angular-lists-ui/src/styles.scss
+++ b/angular-lists-ui/src/styles.scss
@@ -1,4 +1,18 @@
-/* You can add global styles to this file, and also import other style files */
+@import "vars.scss";
 
-html, body { height: 100%; }
-body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+html,
+body {
+  height: 100%;
+}
+body {
+  box-sizing: border-box;
+  margin: 0;
+  font-family: Roboto, "Helvetica Neue", sans-serif;
+  min-height: 100%;
+  background: $color-lightgrey;
+}
+*,
+*:before,
+*:after {
+  box-sizing: inherit;
+}
