--- a/angular-lists-ui/src/app/countries/countries-page/countries-page.component.scss
+++ b/angular-lists-ui/src/app/countries/countries-page/countries-page.component.scss
@@ -1,7 +1,10 @@
 :host {
     display: flex;
-    align-items: center;
     justify-content: center;
     padding: 32px;
     height: 100%;
+}
+
+.list {
+    
 }
