--- a/angular-lists-ui/src/app/shared/list/list.component.scss
+++ b/angular-lists-ui/src/app/shared/list/list.component.scss
@@ -5,7 +5,8 @@
     flex-direction: column;
     box-shadow: $shadow-light;
     background: $color-light;
-    max-height: 500px;
+    max-height: min(100vh, 500px);
+    width: min(100vw, 400px);
     overflow: hidden;
     border-radius: 4px;
 }
