--- a/angular-lists-ui/src/vars.scss
+++ b/angular-lists-ui/src/vars.scss
@@ -1,4 +1,11 @@
 $color-lightgrey: #e2e1e0;
 $color-light: #fff;
+$color-grey: #616161;
 
 $shadow-light: 0 3px 6px rgba(0,0,0,0.16), 0 3px 6px rgba(0,0,0,0.23);
+
+@mixin ellipsis-overflow {
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+}
