Move items getting logic into the base list

--- a/angular-lists-ui/src/app/countries/countries-page/countries-page.component.html
+++ b/angular-lists-ui/src/app/countries/countries-page/countries-page.component.html
@@ -1,1 +1,5 @@
-<app-countries-list class="list" />
+<app-list name="Countries">
+  <ng-template let-item>
+    <app-countries-list-item [country]="item" />
+  </ng-template>
+</app-list>
