--- a/angular-lists-ui/src/app/shared/list/list.component.scss
+++ b/angular-lists-ui/src/app/shared/list/list.component.scss
@@ -28,3 +28,11 @@
 .list {
     overflow: auto;
 }
+
+.loader-container {
+    width: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    padding-bottom: 20px;
+}
