--- a/angular-lists-ui/src/app/shared/list/list.component.html
+++ b/angular-lists-ui/src/app/shared/list/list.component.html
@@ -6,21 +6,25 @@
     <input matInput [formControl]="searchControl" />
   </mat-form-field>
 </div>
-<div class="list">
-  <ng-container *ngIf="!(loading | async); else loader">
-    <mat-selection-list *ngIf="(items | async)?.length">
-      <mat-list-option
-        checkboxPosition="before"
-        *ngFor="let item of items | async"
-      >
-        <ng-template
-          [ngTemplateOutlet]="templateRef"
-          [ngTemplateOutletContext]="{ $implicit: item }"
-        ></ng-template>
-      </mat-list-option>
-    </mat-selection-list>
-  </ng-container>
-</div>
+<cdk-virtual-scroll-viewport
+  *ngIf="!(loading | async); else loader"
+  [itemSize]="itemHeightPx"
+  class="list"
+>
+  <mat-selection-list *ngIf="(items | async)?.length" [formControl]="control">
+    <mat-list-option
+      checkboxPosition="before"
+      *cdkVirtualFor="let item of items | async"
+      [value]="item.id"
+      class="item"
+    >
+      <ng-template
+        [ngTemplateOutlet]="templateRef"
+        [ngTemplateOutletContext]="{ $implicit: item }"
+      ></ng-template>
+    </mat-list-option>
+  </mat-selection-list>
+</cdk-virtual-scroll-viewport>
 
 <ng-template #loader>
   <div class="loader-container">
