--- a/angular-lists-ui/src/app/shared/list/list.component.html
+++ b/angular-lists-ui/src/app/shared/list/list.component.html
@@ -9,13 +9,15 @@
 <cdk-virtual-scroll-viewport
   *ngIf="!(loading | async); else loader"
   [itemSize]="itemHeightPx"
+  #virtualScrollViewport
   class="list"
 >
-  <mat-selection-list *ngIf="(items | async)?.length" [formControl]="control">
+  <mat-selection-list *ngIf="(items | async)?.length">
     <mat-list-option
       checkboxPosition="before"
-      *cdkVirtualFor="let item of items | async"
-      [value]="item.id"
+      *cdkVirtualFor="let item of items | async; templateCacheSize: 0"
+      (selectedChange)="onItemSelectedChange($event, item)"
+      [value]="item"
       class="item"
     >
       <ng-template
