--- a/angular-lists-ui/src/app/users/users-page/users-page.component.html
+++ b/angular-lists-ui/src/app/users/users-page/users-page.component.html
@@ -1,6 +1,5 @@
-<app-list name="Users">
-    <ng-template let-item>
-        <app-users-list-item [user]="item" />
-    </ng-template>
-</app-list>
-  
+<app-resource-list name="Users" [listItemTemplate]="listItem" />
+
+<ng-template #listItem let-item>
+    <app-users-list-item [user]="item" />
+</ng-template>
