--- a/angular-lists-ui/src/app/payments/payments-page/payments-page.component.html
+++ b/angular-lists-ui/src/app/payments/payments-page/payments-page.component.html
@@ -1,6 +1,6 @@
-<app-list name="Payments">
-    <ng-template let-item>
-        <app-payments-list-item [payment]="item" />
-    </ng-template>
-</app-list>
+<app-resource-list name="Payments" [listItemTemplate]="listItem" />
+
+<ng-template #listItem let-item>
+    <app-payments-list-item [payment]="item" />
+</ng-template>
   
