Cleanup list split, fix scroll virtual scroll integration

--- a/angular-lists-ui/src/app/shared/resource-list/resource-list.component.html
+++ b/angular-lists-ui/src/app/shared/resource-list/resource-list.component.html
@@ -10,7 +10,8 @@
   *ngIf="!(loading | async); else loader"
   [itemHeightPx]="itemHeightPx"
   [items]="items | async"
-  [listItemTemplate]="listItemTemplate"
+  [itemTemplate]="listItemTemplate"
+  [formControl]="listControl"
   class="list"
 />
 
