Move global styles to separate directory, update theme

--- a/angular-lists-ui/src/styles/vars.scss
+++ b/angular-lists-ui/src/styles/vars.scss
@@ -1,6 +1,7 @@
 $color-lightgrey: #e2e1e0;
 $color-light: #fff;
 $color-grey: #616161;
+$color-dark: #212121;
 
 $shadow-light: 0 3px 6px rgba(0,0,0,0.16), 0 3px 6px rgba(0,0,0,0.23);
 
