--- a/angular-lists-ui/src/app/users/users-page/users-page.component.html
+++ b/angular-lists-ui/src/app/users/users-page/users-page.component.html
@@ -1,4 +1,8 @@
-<app-resource-list name="Users" [listItemTemplate]="listItem" />
+<app-resource-list
+    name="Users"
+    [listItemTemplate]="listItem"
+    [listControl]="listControl"
+/>
 
 <ng-template #listItem let-item>
     <app-users-list-item [user]="item" />
