--- a/angular-lists-ui/src/app/countries/countries-page/countries-page.component.html
+++ b/angular-lists-ui/src/app/countries/countries-page/countries-page.component.html
@@ -1,4 +1,8 @@
-<app-resource-list name="Countries" [listItemTemplate]="listItem"/>
+<app-resource-list 
+    name="Countries"
+    [listItemTemplate]="listItem"
+    [listControl]="listControl"
+/>
 
 <ng-template #listItem let-item>
     <app-countries-list-item [country]="item" />
